--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
       color: white;
       font-weight: bold;
       margin-top: 20px;
+      .logo {
+  display: block;
+  max-width: 120px;
+  margin: 0 auto 20px;
+}
+
     }
   </style>
 </head>
 <body>
 
   <div class="form-container">
+    <img src="PHOTO-2025-07-04-03-38-22.jpg" alt="Team Logo" class="logo">
     <h2>Submit Your Jersey Details</h2>
     <form action="https://formsubmit.co/halabikareem@gmail.com" method="POST">
       <input type="hidden" name="_captcha" value="false">
