--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Jersey Submission Form</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      background: #f7f7f7;
+    css html, body {
+      background: linear-gradient(135deg, #e0eafc, #cfdef3);
       font-family: Arial, sans-serif;
       padding: 30px;
       color: #333;
